[package]
name = "cosmos-utils"
version.workspace = true
description.workspace = true
keywords.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
bech32 = "0.9.1"
sha2 = "0.10.8"
ripemd = "0.1.3"
base64 = "0.21.7"
thiserror = "1.0.50"
prost = "0.12.3"
prost-types = "0.12.3"
cosmos-sdk-proto = "0.20.0"
rand = "0.8.5"
hex = "0.4.3"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde_json = "1.0"
bs58 = "0.5.0"