[package]
name = "ic-solana-wallet"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-solana = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
sha2 = { workspace = true }
bs58 = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
bech32 = { workspace = true }
ripemd = { workspace = true }
cosmwasm-std = { version = "2.2", features = ["std", "stargate", "staking"] }

[dev-dependencies]
ic-test-utilities-load-wasm = { workspace = true }
ic-solana-rpc = { workspace = true }
serde_bytes = { workspace = true }
test-utils = { workspace = true }
cosmrs = { workspace = true }


# Only include cosmrs for non-wasm targets since it pulls in tokio
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
cosmrs = { workspace = true }
