[package]
name = "ic-solana"
description = "Interact with Solana blockchain from the Internet Computer."
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
base64 = { workspace = true }
bech32 = "0.9"
bincode = "1.3.3"
bs58 = { workspace = true }
candid = { workspace = true }
flate2 = "1.0"
futures = { workspace = true }
getrandom = { version = "0.2", features = ["custom"] }
hex = "0.4.3"
ic-canister-log = { workspace = true }
ic-cdk = { workspace = true }
ic-crypto-secp256k1 = { workspace = true }
ic-metrics-encoder = { workspace = true }
ic-sha3 = "1"
ripemd = "0.1"
serde = { workspace = true }
serde_json = { workspace = true }
serde_bytes = { workspace = true }
serde-big-array = "0.5.1"
sha2 = "0.10"
thiserror = { workspace = true }
url = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
